# sim-lab

./: .flake8  .gitignore  .readthedocs.yaml  .readthedocs.yml  404.html  AUTHORS.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  TEACHING_GUIDE.md  TODO.md  index.html  mkdocs.yml  objects.inv  package-lock.json  pyproject.toml  requirements.txt  search.html  setup.py  sitemap.xml
.github/workflows/: ci.yml
api/: index.html
cli/: index.html
contact/: index.html
contribute/: index.html
developers/architecture/: index.html
developers/creating_simulators/: index.html
developers/registry_system/: index.html
docs/: api.md  cli.md  contact.md  contribute.md  getting_started.md  index.md  modelling_market_dynamics.md  product_popularity.md  resource_fluctuations.md  stock_market.md  teaching_guide.md  tui.md  web.md
docs/developers/: architecture.md  creating_simulators.md  registry_system.md
docs/simulations/: index.md
docs/simulations/agent_based/: agent_based.md
docs/simulations/basic/: product_popularity.md  resource_fluctuations.md  stock_market.md
docs/simulations/discrete_event/: discrete_event.md
docs/simulations/network/: network.md
docs/use_cases/: business_modeling.md  educational_tools.md  scientific_simulation.md
examples/: README.md  product_popularity_simulation_example.py  resource_fluctuations_simulation_example.py  stock_market_simulation_example.py
examples/cli/: run_simulations.sh
examples/jupyter/: simulation_examples.ipynb
examples/python/: advanced_ecosystem_simulators_example.py  resource_fluctuations_example.py  simulator_registry_example.py  stock_market_example.py
examples/python/basic/: stock_market_example.py
examples/python/discrete_event/: bank_queue_example.py
examples/python/domain_specific/: cellular_automaton_example.py  epidemiological_example.py  supply_chain_example.py
examples/python/ecological/: predator_prey_example.py
examples/python/misc/: advanced_simulators_example.py  complex_simulators_example.py
examples/python/network/: information_diffusion_example.py
examples/python/statistical/: markov_chain_example.py  monte_carlo_example.py
examples/python/system_dynamics/: system_dynamics_example.py
getting_started/: index.html
modelling_market_dynamics/: index.html
product_popularity/: index.html
reference/: 30 Sep 202 conversation with Gemini.docx
resource_fluctuations/: index.html
scripts/: release.py  setup_dev.sh
search/: search_index.json
simnexus/: __init__.py
simnexus/cli/: __init__.py  main.py
simnexus/config/: __init__.py  settings.py
simnexus/core/: base_simulation.py
simnexus/simnexus/core/: product_popularity_simulation.py  resource_fluctuations_simulation.py  stock_market_simulation.py
simnexus/tui/: __init__.py  app.py
simnexus/utils/: __init__.py  io.py  validation.py
simnexus/viz/: __init__.py  plots.py
simnexus/web/: __init__.py  app.py
simulacra/: __init__.py  base_simulation.py  continuous_simulation.py  discrete_simulation.py  disease_simulation.py  foo.py  product_popularity_simulation.py  resource_fluctuations_simulation.py  resource_simulation.py  stock_market_simulation.py
simulations/: index.html
simulations/agent_based/agent_based/: index.html
simulations/basic/modelling_market_dynamics/: index.html
simulations/basic/product_popularity/: index.html
simulations/basic/resource_fluctuations/: index.html
simulations/basic/stock_market/: index.html
simulations/discrete_event/discrete_event/: index.html
simulations/network/network/: index.html
src/sim_lab/: __init__.py
src/sim_lab/cli/: __init__.py  main.py
src/sim_lab/config/: __init__.py  settings.py
src/sim_lab/core/: __init__.py  agent_based_simulation.py  base_simulation.py  cellular_automaton_simulation.py  discrete_event_simulation.py  epidemiological_simulation.py  markov_chain_simulation.py  monte_carlo_simulation.py  network_simulation.py  predator_prey_simulation.py  product_popularity_simulation.py  (+6 more)
stock_market/: index.html
teaching_guide/: index.html
tests/: test_continious_simulation.py  test_discrete_event_simulation.py  test_discrete_simulation.py  test_foo.py  test_product_popularity_simulation.py  test_registry.py  test_resource_fluctuations_simulation.py  test_resource_simulation.py  test_stock_market_simulation.py
tui/: index.html
use_cases/business_modeling/: index.html
use_cases/educational_tools/: index.html
use_cases/scientific_simulation/: index.html
web/: index.html
(+21 files in other folders)
