[tool.poetry]
name = "simulacra"
version = "0.1.1"
description = "This Python package provides a set of classes for simulating various business-related scenarios. It is designed for educational use, allowing students to experiment with modeling, analysis, and decision-making in different contexts."
authors = ["Michael Borck <michael@borck.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
mkdocs = "^1.6.0"
mkdocstrings = "^0.25.0"
mypy = "^1.10.0"
flake8 = "^7.0.0"
mkdocs-material = "^9.5.20"
mkdocstrings-python = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
