[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-lab"
version = "0.3.0"
description = "A set of classes for simulating various business-related scenarios for educational use"
readme = "README.md"
authors = [
    {name = "Michael Borck", email = "michael@borck.me"}
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.26.0",
    "typer[all]>=0.9.0",
    "uvicorn>=0.29.0",
    "textual>=0.52.1",
    "matplotlib>=3.8.0",
    "plotly>=5.19.0",
    "pydantic>=2.7.0",
    "pymdown-extensions>=10.8.1",
    "pycparser>=2.22",
    "jinja2>=3.1.3",
    "python-fasthtml>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=4.1.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.2",
    "mkdocstrings>=0.25.0",
    "mkdocstrings-python>=1.10.0",
    "ruff>=0.1.5",
    "mypy>=1.8.0",
    "build>=1.0.0",
    "twine==6.0.1",
]
web = [
    "uvicorn>=0.29.0",
    "python-fasthtml>=0.1.0",
]
cli = [
    "typer[all]>=0.9.0",
]

[project.urls]
Homepage = "http://sim-lab.borck.me"
Documentation = "https://michael-borck.github.io/sim-lab/"
Repository = "https://github.com/michael-borck/sim-lab"

[project.scripts]
simlab = "sim_lab.cli.main:app"

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "D",  # pydocstyle
]
ignore = [
    "E501",  # line too long - let ruff formatter handle this
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["D", "E501"]

[tool.ruff.isort]
known-first-party = ["sim_lab"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=sim_lab --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
